네비 테스트 - #header .nav_search.fixed{  position: fixed;  overflow:hidden !important; }

--- a/mobile/css/adidas/style.css
+++ b/mobile/css/adidas/style.css
@@ -2854,6 +2854,7 @@ p.holiday_delay strong{font:600 13px/18px 'NotoSansKR'; }
 /* 190415 */
 #header .nav_search.fixed{
 	position: fixed; 
+	overflow:hidden !important;
 }
 #header .nav_search .sch_box{
 	position: relative;
